(lang dune 3.8)
(name single-use-event)
(generate_opam_files true)
(source (github ocaml-multicore/single-use-event))
(authors "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(homepage "https://github.com/ocaml-multicore/single-use-event")
(license "ISC")
(implicit_transitive_deps false)
(package (name single-use-event)
 (synopsis "A scheduler independent blocking mechanism")
 (description "A low level mechanism intended for writing higher level libraries that need to block in a scheduler friendly manner.")
 (depends
  (ocaml (>= 5.0.0))
  (backoff (and (>= 0.1.0) :with-test))
  (mdx (and (>= 2.3.0) :with-test))))
(using mdx 0.4)
